--- a/home.html
+++ b/home.html
@@ -16,6 +16,7 @@
                 margin: 0;
                 padding: 0;
                 /* background-image: url(img_ecom/signupbg.jpg); */
+                background-color: #9A616D;
                 width: 100%;
                 height: 100vh;
                 background-position: center;
@@ -66,7 +67,7 @@
                         <a class="nav-link" href="#">Contact</a>
                     </li>
                 </ul>
-                <a class="nav-link" href="customerlogin.html">Sign in</a>&emsp;
+                <a class="nav-link" href="index.html">Sign out</a>&emsp;
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
