--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             margin: 0;
             padding: 0;
             /* background-image: url(img_ecom/signupbg.jpg); */
+            background-color: #9A616D;
             width: 100%;
             height: 100vh;
             background-position: center;
@@ -24,6 +25,12 @@
             background-attachment: fixed;
             font-family: Lucida Sans;
         }
+
+        .carousel-inner{
+            width:100%;
+            max-height: 450px !important;
+        }
+
     </style>
 </head>
 <body>
@@ -66,7 +73,7 @@
                         <a class="nav-link" href="#">Contact</a>
                     </li>
                 </ul>
-                <a class="nav-link" href="customerlogin.html">Sign in</a>&emsp;
+                <a class="nav-link" href="registration.html">Sign up</a>&emsp;
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
@@ -74,24 +81,24 @@
             </div>
         </div>
     </nav>
-    <br>
-    <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
-        <div class="carousel-inner" style="height: auto;">
-            <div class="carousel-item active">
-                <img src="img_ecom/restaurant-3.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="img_ecom/restaurant-2.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
+
+    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="3000">
                 <img src="img_ecom/restaurant-1.jpg" class="d-block w-100" alt="...">
             </div>
+            <div class="carousel-item" data-bs-interval="3000">
+                <img src="img_ecom/restaurant-3.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item" data-bs-interval="3000">
+                <img src="img_ecom/restaurant-2.jpg" class="d-block w-100" alt="...">
+            </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
         </button>
