--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Khaana Khajana - Home </title>
+    <title>Khaana Khajana | Home </title>
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
@@ -28,18 +28,16 @@
         #signoutbtn{
             height: 5vh;
             border-radius: 4px;
-            background-color: antiquewhite;
-            border-width: 1px;
+            background-color: rgba(215, 47, 81, 0.718);
+            color:white;
+            border: none;
   
         }
-
         #signoutbtn:hover{
-            /* background-color: rgb(118, 119, 119);
-            color: aliceblue; */
             transition-delay: 10ms;
             transition-timing-function: ease-in-out;
-            transition-duration: 170ms;
-            background-color: #6c757d ;
+            transition-duration: 100ms;
+            background-color:#a83885;
             color: white;
         }
         
