--- a/home.html
+++ b/home.html
@@ -79,7 +79,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
                 <a href="index.html"><button id="signoutbtn" type="button">Sign out</button></a>
