--- a/contact.html
+++ b/contact.html
@@ -64,11 +64,11 @@
         }
         .contact-form h1{
             font-size: 50px;
-            color: #000;
+            color: #cd0746;
             margin-bottom: 20px;
         }
         .contact-form p{
-            color: #000;
+            color: #ddd3d3;
             letter-spacing: 1px;
             line-height: 26px;
             font-size: 1.1rem;
@@ -83,11 +83,14 @@
             padding: 15px;
             border: 0;
             outline: 0;
-            background: #191919;
+            background: #191919a4;
             color: #fff;
             margin-bottom: 0.7rem;
             border-radius: 10px;
 
+        }
+        ::placeholder{
+            color: #ffffffbe;
         }
         .contact-form textarea{
             resize: none;
@@ -166,9 +169,9 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. fugit magnam exercitationem soluta, labore pariatur quod?</p>
 
             <form action="#">
-                <input type="text" name="Name" placeholder="Your Name" required>
+                <input type="text" name="Name" placeholder="Name" required>
                 <input type="email" name="Email" placeholder="Email" required>
-                <textarea id="" cols="30" rows="10" name="Comments" placeholder="Comments & Querys" required></textarea>
+                <textarea id="" cols="30" rows="10" name="Comments" placeholder="Comments & Queries" required></textarea>
                 <input type="submit" class="submitbtn">
             </form>
         </div>
