--- a/contact.html
+++ b/contact.html
@@ -57,6 +57,7 @@
             grid-gap: 6rem;
 
         }
+
         .contact-img img{
             max-width: 100%;
             width: 700px;
@@ -64,11 +65,13 @@
             border-radius: 8px;
             box-shadow: 0px 2px 4px black;
         }
+
         .contact-form h1{
             font-size: 50px;
             color: #f9004d;
             margin-bottom: 20px;
         }
+
         .contact-form p{
             color: #ddd3d3;
             letter-spacing: 1px;
@@ -76,10 +79,12 @@
             font-size: 1.1rem;
             margin-bottom: 2.5rem;
         }
+
         .contact-form form{
             position: relative;
 
         }
+
         .contact-form form input, form textarea{
             width: 100%;
             padding: 15px;
@@ -92,13 +97,16 @@
             box-shadow: 0px 2px 4px black;
 
         }
+
         ::placeholder{
             color: #ffffffbe;
         }
+
         .contact-form textarea{
             resize: none;
             height: 200px;
         }
+
         .contact-form .submitbtn{
             display: inline-block;
             background: #f9004d;
@@ -114,15 +122,14 @@
             box-shadow: 0px 1.8px #000;
             color: #fff;
         }
+
         .contact-form .submitbtn:hover{
-            /* border: 2px solid #f9004d;
-            background: transparent;
-            transform: scale(1.1); */
             transition-delay: 10ms;
             transition-timing-function: ease-in-out;
             transition-duration: 100ms;
             background-color:#a83885;
         }
+
     </style>
 
 </head>
@@ -145,7 +152,7 @@
                         <a class="nav-link active" aria-current="page" href="home.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="index.html#about">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
