--- a/customerlogin.html
+++ b/customerlogin.html
@@ -14,7 +14,6 @@
         body {
             margin: 0;
             padding: 0;
-            /* background-image: url(img_ecom/signupbg.jpg); */
             background-color: #9A616D;
             width: 100%;
             height: 100vh;
@@ -37,8 +36,6 @@
         }
         
         #signupbtn:hover{
-            /* background-color: rgb(118, 119, 119);
-            color: aliceblue; */
             transition-delay: 5ms;
             transition-timing-function: ease-in-out;
             transition-duration: 100ms;
@@ -58,8 +55,6 @@
         }
         
         #loginbtn:hover{
-            /* background-color: rgb(118, 119, 119);
-            color: aliceblue; */
             transition-delay: 5ms;
             transition-timing-function: ease-in-out;
             transition-duration: 100ms;
@@ -136,7 +131,7 @@
                         <a class="nav-link active" aria-current="page" href="home.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="index.html#about">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
