--- a/home.html
+++ b/home.html
@@ -14,7 +14,6 @@
         body{
             margin: 0;
             padding: 0;
-            /* background-image: url(img_ecom/signupbg.jpg); */
             background-color: #9A616D;
             width: 100%;
             height: 100vh;
@@ -62,7 +61,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="index.html#about">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
