--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
 
         .contact{
             background:rgba(0, 0, 0, 0.405);
-            height: 80%;
+            height: auto;
             width: 80%;
             min-height: 100%;
             display: grid;
@@ -119,7 +119,7 @@
             width: 120px;
             transition: ease 0.2s;
             cursor: pointer;
-            box-shadow: 0px 1.8px #000;
+            box-shadow: 0px 0px 2px #000000;
             color: #fff;
         }
 
@@ -127,7 +127,32 @@
             transition-delay: 10ms;
             transition-timing-function: ease-in-out;
             transition-duration: 100ms;
-            background-color:#a83885;
+            box-shadow: 0px 0px 17px 2px #ffffff;
+        }
+
+        @media only screen and (max-width: 600px){
+            section{
+                padding: 50px 8%;
+            }
+            .contact{
+                height: auto;
+                width: auto;
+                grid-template-columns: 1fr;
+                margin-left: 5%;
+                margin-right: 5%;
+            }
+            .contact-form h1{
+                font-size: 38px;
+            }
+            .contact-form{
+                order: 2;
+            }
+            .contact-img img{
+                max-width: 100%;
+                width: 100%;
+                height: auto;
+                text-align: center;
+            }
         }
 
     </style>
